added pagination,unique post id, template improvements

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,6 +13,12 @@
 <script src='{% static "js/bootstrap.min.js" %}'></script>
 
 </head>
+<style>
+	{% block style %}
+
+
+	{% endblock style %}
+</style>
 <body>
 <div class="container">
   {% block content %}
