--- a/src/templates/all_post.html
+++ b/src/templates/all_post.html
@@ -9,9 +9,27 @@
 <h4>{{i.title}}<small>{{i.timestamp|timesince}}</small></h4>
 <p>tags:{{i.tag}}</p>
 <p>{{i.content |linebreaks |truncatechars:50}}</p>
-<a href="{% url 'blog:details' i.id %}" class="btn btn-sm btn-success">view details</a>
+<a href="{% url 'blog:details' i.uid %}" class="btn btn-sm btn-success" style="width:80%; margin-left:10%; padding:5px;">view complete post</a>
 </div>
 </div>
 </div>
 {% endfor %}
+
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+<div class="pagination">
+<span class="step-links">
+{% if qry.has_previous %}
+<a href="?page={{ qry.previous_page_number }}">previous</a>
+{% endif %}
+<span class="current">
+Page {{ qry.number }} of {{ qry.paginator.num_pages }}.
+</span>
+{% if qry.has_next %}
+<a href="?page={{ qry.next_page_number }}">next</a>
+{% endif %}
+</span>
+</div>
+</div>
+</div>
 {% endblock content %}
