--- a/src/templates/create_post.html
+++ b/src/templates/create_post.html
@@ -2,15 +2,39 @@
 {% block page_title%}
 <title>Create Post</title>
 {% endblock page_title%}
-<br>
-<h3>Create Post</h3>
+{% block style %}
+	.form-control{
+		width:100%;
+	}
+
+{% endblock style %}
+
 {% block content %}
+<br>
 <div class="row">
 <div class="col-md-6 col-md-offset-3">
 <div class="well">
-  <form method="POST">{% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Create post">
+<h3>Create Post</h3>
+  <form class="" method="POST" action="">{% csrf_token %}
+	<div class="form-group">
+		<label for="title">Title:</label>
+		<input type="text" id="title" class="form-control" maxlength="120" name="{{ form.title.html_name}}">
+	</div>
+	<div class="form-group">
+		<label for="content">Content:</label>
+		<textarea id="content" class="form-control" name="{{ form.content.html_name}}" rows="4"></textarea>
+	</div>
+	<label for="tag">Tag:</label>
+	<select id="tag" name="{{ form.tag.html_name}}" class="form-control">
+	  <option value="Science">Science</option>
+	  <option value="Technology">Technology</option>
+	  <option value="Arts">Arts</option>
+	  <option value="News">News</option>
+	  <option value="Event">Event</option>
+	  <option value="Music">Music</option> 
+	</select>
+
+    <button style="margin-top:15px; margin-left:10%; width:80%;" class="btn btn-success" type="submit">Create New Post</button>
   </form>
 </div>
 </div>
