--- a/src/templates/details.html
+++ b/src/templates/details.html
@@ -15,7 +15,8 @@
 <div class="row">
 <div class="col-md-6 col-md-offset-3">
 <div class="well">
-<h3>{{title}}<small>{{timestamp}}</small></h3>
+<h3>{{title}}</h3>
+<h4><small>{{timestamp}}</small></h4>
 <p>tags: {{tag}}</p>
 <p>{{content|linebreaks}}</p>
 </div>
