--- a/src/templates/details.html
+++ b/src/templates/details.html
@@ -15,10 +15,13 @@
 <div class="row">
 <div class="col-md-6 col-md-offset-3">
 <div class="well">
-<h3>{{title}}</h3>
-<h4><small>{{timestamp}}</small></h4>
-<p>tags: {{tag}}</p>
-<p>{{content|linebreaks}}</p>
+<h3>{{qry.title}}</h3>
+<h4><small>{{qry.timestamp}}</small></h4>
+<p>tags: {{qry.tag}}</p>
+{% if qry.image %}
+<img src="{{qry.image.url}}" class="img-responsive">
+{% endif %}
+<p>{{qry.content|linebreaks|safe}}</p>
 </div>
 </div>
 </div>
