--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,20 +10,72 @@
 <script src='{% static "jquery/jquery-2.1.4.min.js" %}' type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href='{% static "css/bootstrap.min.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "css/bootstrap-theme.min.css" %}'>
+<link rel="stylesheet" type="text/css" href='{% static "css/bootstrap-social.css" %}'>
+<link rel="stylesheet" type="text/css" href='{% static "css/font-awesome.css" %}'>
 <script src='{% static "js/bootstrap.min.js" %}'></script>
 
 </head>
 <style>
-	{% block style %}
+.container{
+		width: 100%;
+	}
+	.navbar-nav{
+		padding-right: 10px;
+	}
+	#srch{
+		margin-top: 12px;
+		margin-left: 16px;
+		border-radius: 5px 0px 0px 5px;
+		height:24px;
+	}
+	.navbar{
+		border-radius: 0px;
+		margin: 0px;
+	}
+	#postquestion{
+		color: white;
+		font-size: 14px;
+		padding: 8px;
+		border-width: 3px;
+		margin: 4px 3px 3px 3px;
+	}
+	#postquestion: hover{
+		background-color: none;
+	}
+
+{% block style %}
 
 
-	{% endblock style %}
+{% endblock style %}
 </style>
 <body>
+<nav class="navbar navbar-inverse">
+	<div class="navbar-header">
+		<a class="navbar-brand" href="{% url 'blog:all_posts' %}">ANONblog</a>
+		<form style="display:inline;" method="GET" action="">
+			<input type="text" id="srch" name="q" value="{{ request.GET.q }}" placeholder="Search posts..."><span><button type="submit" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-search"></span></button></span>
+		</form>
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+	</div>
+	<div class="collapse navbar-collapse" id="navbar">
+	<ul class="nav navbar-nav navbar-right">
+		<li><a href="{% url 'blog:create_post' %}"><span class="glyphicon glyphicon-edit"></span> Create Post</a></li>
+		<li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+		<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+	</ul>
+	</div>
+</nav>
+
+
 <div class="container">
   {% block content %}
 
   {% endblock content %}
 </div>
+<script async defer src="https://assets.pinterest.com/js/pinit.js"></script>
 </body>
 </html>
