--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -64,8 +64,8 @@
 	<div class="collapse navbar-collapse" id="navbar">
 	<ul class="nav navbar-nav navbar-right">
 		<li><a href="{% url 'blog:create_post' %}"><span class="glyphicon glyphicon-edit"></span> Create Post</a></li>
-		<li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
-		<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+		<li><a href="#"><span class="glyphicon glyphicon-user"></span> Account</a></li>
+		<li><a href="{% url 'blog:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
 	</ul>
 	</div>
 </nav>
